# logical_parser

./: Cargo.toml  readme.md
examples/: evaluator.rs  truth_table_solver.rs
src/: ast.rs  lib.rs  logic_parser.lalrpop
tests/: evaluation_tests.rs  truth_table_test.rs
